Modificaciones datatable, ruta api para colecciones
